Attempt to prevent pull-to-refresh on mobile.

--- a/docs/style.css
+++ b/docs/style.css
@@ -9,6 +9,10 @@ html, body {
     padding: 0;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 /* just to be sure these are full screen*/
 
 canvas {
